# LearningHub

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  version.txt
.github/: CODEOWNERS  generate_version.py  version.txt  version_update.py  version_update.sh
.github/workflows/: ConanBuildTestLinux.yml  ConanBuildTestWindows.yml  ConanCreateTestLinux.yml  ConanCreateTestWindows.yml  Create_Git_Tag_On_PR.yml  ci.yml  update_version.yml
BlogResources/Bluetooth/: Basic.md  Bluetooth A2DP Profile.docx  Bluetooth Profiles.docx  BluetoothArchitectureOverview.md  BluetoothProfile.md  Understanding Bluetooth.docx
BlogResources/CPP Blog/: AboutUs.html  Basic of C++ Programming Language.html  ContactUs.html  LocalClassesInCpp.html  Reasons for a C++ Program Crash.html  Theme.html
BlogResources/CPP Page/: Page TechPrastu C++.html
CPP/: CMakeLists.txt
CPP/FunctionPointer/: CMakeLists.txt  README.md  functionPointer.cpp
CPP/InitializerList/: CMakeLists.txt  InitializerList.cpp  InitializerList1.cpp  InitializerList2.cpp  InitializerList3.cpp  InitializerList4.cpp  InitializerList5.cpp
CPP/LocalClasses/: CMakeLists.txt  LocalClass.cpp  LocalClass1.cpp  LocalClass2.cpp  LocalClass3.1.cpp  LocalClass3.cpp  LocalClass4.1.cpp  LocalClass4.2.cpp  LocalClass4.cpp  LocalClass5.cpp  LocalClass6.cpp  LocalClass7.cpp
CPP/Miscellaneous/: AnonymousClass.cpp  AnonymousClass2.cpp  AnonymousClass3.cpp  MutableDataMembers.cpp  NamelessTemporaryObjects.cpp  VtableExample.cpp  constexpr.cpp  constexpr2.cpp
CPP/Miscellaneous/CppCompilation/: CompilationErrors.md  CppCompilationProcess.md  DebuggingCompilationErrors.md
CPP/Miscellaneous/PreventingAddressAccessOfAnObjectInCpp/: Method1.cpp  Method2.cpp  README.md
CPP/Miscellaneous/TypeId/: README.md  Typeid_Example1.cpp
CPP/STL/: CMakeLists.txt  emplace_back2.cpp
CPP/STL/EmplaceBack/: README.md  emplace_back.cpp  emplace_back3.cpp
FunctionPointer/: CMakeLists.txt  README.md  functionPointer.cpp
HTML_Code/CPP Blog/: Basic of C++ Programming Language.html  Reasons for a C++ Program Crash.html
Python/: ClassInPython.py  GroceryStore.py  Hello.py  Inheritance.py
Python/Polymorephism/: DepndancyInjection.py  DuckTyping.py
